# optionlab

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  cicd_error.txt  log  pyproject.toml  report.txt  setup.py  support.py
.github/: pull_request_template.md
.github/actions/cached-venv/: action.yml
.github/workflows/: cicd.yml
docs/: index.html  optionlab.html  search.js
docs/optionlab/: black_scholes.html  engine.html  models.html  plot.html  price_array.html  support.html  utils.html
examples/: black_scholes_calculator.ipynb  calendar_spread.ipynb  call_spread.ipynb  covered_call.ipynb  generate_strategies.ipynb  msft_22-November-2021.csv  naked_call.ipynb  naked_call_to_cover_previous_loss.ipynb  pop_calculator.ipynb
optionlab/: .gitignore  __holidays__.py  __init__.py  api.py  black_scholes.py  engine.py  models.py  option_chain.py  plot.py  price_array.py  strategies.py  strategy.py  support.py  utils.py
optionsmonkey/: __init__.py  black_scholes.py  holidays.py  models.py  option_chain.py  strategy.py  strategyengine.py  support.py
tests/: .gitignore  conftest.py  test_api.py  test_core.py  test_misc.py  test_models.py
