[tool.poetry]
name = "optionlab"
version = "1.5.1"
description = "Python library for evaluating options trading strategies"
authors = ["Roberto Gomes, PhD <roberto.veiga@ufabc.edu.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.12.0"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
pydantic = "^2.9"
holidays = "^0.44"
jupyter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.0"
black = {extras = ["jupyter"], version = "^24.2.0"}
pytest = "^8.0.2"
pytest-benchmark = "^4.0.0"
ruff = "^0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
